compiler/weave_syntax/tests/data/syntax/namespace/ns0007.error
error: Expected '{'
        --> <source>:1:13
         |
       1 | namespace Y }
         |             ^
